fix: update z-index for Navbar component and add isolation style for main content

--- a/src/styles/out.css
+++ b/src/styles/out.css
@@ -1665,6 +1665,10 @@ summary {
   inset: .5rem;
 }
 
+.is-i {
+  isolation: isolate;
+}
+
 .ix-0 {
   left: 0;
   right: 0;
